# music-player-service

./: .env  .gitignore  Cargo.toml
assets/: lastSource.json
src/: main.rs
src/controller/: mod.rs
src/controller/book/: mod.rs
src/controller/user/: mod.rs
src/db/: mod.rs
src/docs/: mod.rs
src/model/: mod.rs
src/model/book/: mod.rs
src/model/user/: mod.rs
src/service/book/: mod.rs
src/service/user/: mod.rs
