[package]
name = "music-player-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
anyhow = "1.0.79"
diesel = {version = "2.1.4", features = ["mysql"]}
dotenv = "0.15.0"
features = "0.10.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
utoipa = {version = "4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "6.0.0", features = ["actix-web"]}
